Implement category management and enhance product filtering in the Amazon Price Tracker application. Added support for product categories in the database, updated product listing and search functionalities to filter by category, and improved the UI for better user experience. Also included new routes for category retrieval and updated the scraper to extract categories from product pages.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,9 +10,11 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["node"],
+    "downlevelIteration": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
 
