--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3"
   },
@@ -22,4 +25,3 @@
     "vite": "^7.3.0"
   }
 }
-
